--- a/Proyecto/templates/actualizar_medico.html
+++ b/Proyecto/templates/actualizar_medico.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actualizar Médico</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body class="bg-light">
+
+    {% extends 'plantilla.html' %}
+
+    {% block body %}
+
+
     <div class="container-fluid mt-4 mb-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -156,7 +152,4 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-</body>
-</html>
+    {% endblock %}
