--- a/Proyecto/templates/administrar_medicos.html
+++ b/Proyecto/templates/administrar_medicos.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrar Médicos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
 
-<body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top">
-        <div class="container-fluid">
-            <ul class="navbar-nav d-flex flex-row gap-4">
-                <li class="nav-item"><a class="nav-link text-dark fw-medium" href="/administrar_medicos">Médicos</a></li>
-                <li class="nav-item"><a class="nav-link text-dark fw-medium" href="/consultar_pacientes">Pacientes</a></li>
-                <li class="nav-item"><a class="nav-link text-dark fw-medium" href="/consultar_citas">Citas</a></li>
-                <li class="nav-item"><a class="nav-link text-dark fw-medium" href="/exploracion_diagnostico">Exploración</a></li>
-            </ul>
-        </div>
-    </nav>
+    {% extends 'plantilla.html' %}
+
+    {% block body %}
+
 
     <div class="container-fluid mt-4 mb-4">
         <div class="row justify-content-center">
@@ -65,16 +49,23 @@
                                         <td>{{ medico[5] }}</td>
                                         <td class="text-center">
                                             <div class="d-flex gap-2 justify-content-center">
+                                                
+                                                
+                                                
                                                 <form action="{{ url_for('EditarM.editar_medico', rfc=medico[1]) }}" method="POST">
                                                     <button class="btn btn-outline-dark btn-sm" type="submit">
                                                         <i class="fas fa-edit"></i> Editar
                                                     </button>
                                                 </form>
+
+
                                                 <form action="{{ url_for('EliminarM.eliminar_medico', rfc=medico[1]) }}" method="POST">
                                                     <button class="btn btn-outline-danger btn-sm" type="submit">
                                                         <i class="fas fa-trash-alt"></i> Eliminar
                                                     </button>
                                                 </form>
+
+                                                
                                             </div>
                                         </td>
                                     </tr>
@@ -123,7 +114,5 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-</body>
-</html>
+    {% endblock %}
+
