--- a/Proyecto/templates/agregar_medico.html
+++ b/Proyecto/templates/agregar_medico.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Nuevo Médico</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
-        <div class="container-fluid">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('AdministrarM.administrar_medicos') }}">Médicos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/consultar_pacientes">Pacientes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/consultar_citas">Citas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/exploracion_diagnostico">Exploración</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+
+    {% extends 'plantilla.html' %}
+
+    {% block body %}
+
+
 
     <div class="container-fluid mt-4 mb-4">
         <div class="row justify-content-center">
@@ -210,6 +188,4 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    {% endblock %}
