--- a/Proyecto/templates/consultar_citas.html
+++ b/Proyecto/templates/consultar_citas.html
@@ -1,58 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Citas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+    {% extends 'plantilla.html' %}
 
-    <style>
-        nav{
-
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            background-color: #ffffff;
-            border-bottom: 1px solid #e0e0e0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            background-color: #f4f4f4;
-        }
-
-        .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 2rem;
-            margin: 0;
-            padding: 0;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: #000;
-            font-weight: 500;
-            position: relative;
-            padding-bottom: 2px;
-        }
-    </style>
-
-    
-    
-
-    <nav>
-
-        <ul class="nav-links">
-            <li><a href="/administrar_medicos">Médicos</a></li>
-            <li><a href="/consultar_pacientes">Pacientes</a></li>
-            <li><a href="/consultar_citas">Citas</a></li>
-            <li><a href="/exploracion_diagnostico">Exploración</a></li>
-
-        </ul>
-    </nav>
+    {% block body %}
 
     <div class="container-fluid mt-3">
         <div class="row">
@@ -115,6 +63,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+    
+
+    {% endblock %}
