--- a/Proyecto/templates/login.html
+++ b/Proyecto/templates/login.html
@@ -74,6 +74,9 @@
 </head>
 <body>
 
+
+    
+
     <div class="login-container">
         <div class="login-box">
             <img src="{{ url_for('static', filename='imagenes/logo.png') }}">
@@ -82,10 +85,19 @@
             <h3>Ingresa a tu cuenta</h3>
 
             <form action="{{ url_for('Login.procesar_login') }}" method="POST">
-                <input type="text" name="txtRFC" placeholder="RFC" required>
-                <input type="password" name="txtContrasena" placeholder="Contraseña" required>
+                <input type="text" name="txtRFC" placeholder="RFC" value="{{request.form.txtRFC}}">
+                <input type="password" name="txtContrasena" placeholder="Contraseña"  value="{{request.form.txtContrasena}}">
                 <a href="#">¿Olvidó su contraseña?</a>
                 <button type="submit">Entrar</button>
+
+                        {%with mensajes =  get_flashed_messages()%}
+                            {% if mensajes%}
+                                {% for msj in mensajes%}
+                                    <div class="alert alert-info" style="color: red;">{{msj}}</div>
+                                {%endfor%}
+                            {% endif %}
+                        {%endwith%}
+
             </form>
             </div>
         </div>
