--- a/Proyecto/templates/consultar_pacientes.html
+++ b/Proyecto/templates/consultar_pacientes.html
@@ -93,7 +93,7 @@
                         {% with mensajes = get_flashed_messages() %}
                             {% if mensajes %}
                                 {% for msj in mensajes %}
-                                    <h4 style="color: blue" class="text-center">{{ msj }}</h4>
+                                    <div class="alert alert-info">{{msj}}</div>
                                 {% endfor %}
                             {% endif %}
                         {% endwith %}
